php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #27040 passing an array of form-fields to CURLOPT_POSTFIELDS does not work
Submitted: 2004-01-25 18:58 UTC Modified: 2004-01-25 19:13 UTC
From: sniper@php.net Assigned:
Status: Closed Package: cURL related
PHP Version: 4CVS, 5CVS OS: *
Private report: No CVE-ID: None
 [2004-01-25 18:58 UTC] sniper@php.net
Description:
------------
Using variable works, using plain array doesn't.

Reproduce code:
---------------
<?php
$ch = curl_init('http://www.cs.tut.fi/cgi-bin/run/~jkorpela/echo.cgi');
curl_setopt($ch,CURLOPT_RETURNTRANSFER,1);
curl_setopt($ch,CURLOPT_POSTFIELDS, array ('field1'=>'1','field2'=>'2'));
$result = curl_exec($ch);
var_dump($result);
curl_close($ch);
?>


Expected result:
----------------
string(463) "<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
<html lang="en-US">
<head>
<title>Echoing submitted form data</title>
</head>
<body>
<h1 style="font-size:1.2em">Echoing submitted form data</h1>
<table border="1" cellspacing="0">
<tr><th align="left" nowrap><tt>field1</tt></th><td nowrap><tt>1</tt></td></tr>
<tr><th align="left" nowrap><tt>field2</tt></th><td nowrap><tt>2</tt></td></tr>
</table>
<p>Processed 2004-01-26T00:01Z
</p></body></html>"


Actual result:
--------------
The field values appear as 'Z' 

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-01-25 19:13 UTC] sniper@php.net
Fixed in CVS.

 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 18:00:01 2026 UTC