- Fixed bug #27040 (passing an array of form-fields to CURLOPT_POSTFIELDS does not work).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@149740 c90b9560-bf6c-de11-be94-00142212c4b1