ext/curl/interface.c
@@ -1001,7 +1001,7 @@ PHP_FUNCTION(curl_setopt)
 						error = curl_formadd(&first, &last, 
 											 CURLFORM_COPYNAME, string_key,
 											 CURLFORM_NAMELENGTH, string_key_len - 1,
-											 CURLFORM_PTRCONTENTS, postval, 
+											 (ZVAL_REFCOUNT(*zvalue) > 1 ? CURLFORM_PTRCONTENTS : CURLFORM_COPYCONTENTS), postval, 
 											 CURLFORM_CONTENTSLENGTH, Z_STRLEN_PP(current),
 											 CURLFORM_END);
 					}
